New_tests/System_3/Test_2/trial_3/slurm_outputs/slurm-8475549.out
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
  File "calculate_free_energy.py", line 319
    except:
    ^
SyntaxError: invalid syntax
